[metadata]
name = dol
version = 0.2.88
url = https://github.com/i2mint/dol
platforms = any
description_file = README.md
description = Base builtin tools make and transform data object layers (dols).
root_url = https://github.com/i2mint
license = mit
author = OtoSense
author_email = thorwhalen1@gmail.com
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		storage
		interface
display_name = dol

[options]
packages = find:
include_package_data = True
zip_safe = False
tests_require = 
    numpy
install_requires =
;    If you're reading this, know that there are no dependencies,
;	nor will there ever be.
;   So if you're a contributor that's about to add some. Don't.
;	Find another way to solve your problem!

