[metadata]
name = dol
version = 0.3.16
url = https://github.com/i2mint/dol
platforms = any
description_file = README.md
description = Base builtin tools make and transform data object layers (dols).
root_url = https://github.com/i2mint
license = mit
author = OtoSense
author_email = thorwhalen1@gmail.com
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
	storage
	interface
display_name = dol

[options]
packages = find:
include_package_data = True
zip_safe = False
tests_require = 
	numpy
install_requires = 
# No dependencies, and should NEVER be any!!

[tool:pytest]
# Add doctest options to enable ellipsis handling
addopts = --doctest-modules --doctest-ellipsis
