[metadata]
name = dol
version = 0.3.36
url = https://github.com/i2mint/dol
platforms = any
description_file = README.md
description = Base builtin tools make and transform data object layers (dols).
root_url = https://github.com/i2mint
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
	storage
	interface
display_name = dol

[options]
packages = find:
include_package_data = True
zip_safe = False
tests_require = 
	numpy
install_requires = 

[options.extras_require]
testing = 

